Create article view

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
-  background-color: #053653;
+  background-color: #E5F2FD;
 }
 
 .App-title {
@@ -44,29 +44,4 @@
 #content-container {
   display: flex;
   justify-content: center;
-}
-
-.form-row {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.form-row > label {
-  margin-right: 10px;
-  display: inherit;
-  margin-bottom: 10px;
-  color: #0d88d3;
-  font-weight: bold;
-}
-
-.form-row > input, .form-row > select {
-  width: 100%;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  text-align: start;
-  width: 20em;
 }
