--- a/src/components/price-display/price-display.css
+++ b/src/components/price-display/price-display.css
@@ -19,11 +19,26 @@
 
 #quantity {
     width: auto;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 i {
-    font-size: 24px;
+    font-size: 20px;
     color: #0d88d3;
+    padding: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+    i {
+        padding: 14px;
+        border: 2px solid #EEE;
+    }
+
+    #quantity {
+        padding-top: 14px;
+        padding-bottom: 14px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
