--- a/src/components/input-selection/input-select.css
+++ b/src/components/input-selection/input-select.css
@@ -1,34 +1,42 @@
-.select-wrapper:before {
-    font-family: Futura;
-    content: "\f107";
-    font-size: 20px;
-    position: absolute;
-    right: 15px;
-    top: 10px;
-    color: black;
+.selectdiv {
+    position: relative;
+    height: 36px;
 }
 
-.select-wrapper:before {
+.selectdiv:after {
+    content: '\f078';
+    font-family: FontAwesome;
+    color: #fee011;
+    right: 11px;
+    top: 6px;
+    height: 20px;
+    padding: 8px 0 0 8px;
+    position: absolute;
     pointer-events: none;
 }
 
-select {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-    border: none;
-}
-
+/* IE11 hide native button (thanks Matt!) */
 select::-ms-expand {
     display: none;
 }
 
-select {
-    /* ... */
+.selectdiv select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    /* Add some styling */
+
+    display: block;
     width: 100%;
     height: 36px;
-    background: white;
-    font-family: 'Open Sans', sans-serif;
+    float: right;
+    margin: 5px 0;
+    padding: 0 5px;
     font-size: 16px;
-    border: 2px solid #CCC;
+    line-height: 1.75;
+    color: #333;
+    background-color: white;
+    border: 1px solid #CCC;
+    -ms-word-break: normal;
+    word-break: normal;
 }
