--- a/src/components/messages/Messages.css
+++ b/src/components/messages/Messages.css
@@ -2,7 +2,7 @@
     position: fixed;
     text-align: center;
     width: 30em;
-    top: 200px;
+    top: 5px;
     height: 80px;
     background-color: #1db082;
     color: white;
@@ -22,7 +22,8 @@
 
 @media only screen and (max-width: 600px) {
     #success-message {
-        top: 90px;
-        width: 20em;
+        top: 5px;
+        left: 0;
+        width: 100%;
     }
 }
