--- a/src/components/price-display/PriceDisplay.css
+++ b/src/components/price-display/PriceDisplay.css
@@ -12,11 +12,11 @@
 }
 
 .price-row {
-    margin-right: 10px;
     height: 36px;
-    margin-bottom: 10px;
     align-items: center;
     display: flex;
+    margin: 30px 0;
+    margin-right: 10px;
 }
 
 #quantity {
@@ -29,6 +29,10 @@ i {
     font-size: 20px;
     color: #fee011;
     padding: 5px;
+}
+
+.summary-row {
+    margin-top: 60px;
 }
 
 @media only screen and (max-width: 600px) {
