--- a/src/views/view.css
+++ b/src/views/view.css
@@ -2,6 +2,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     flex-grow: 1;
+    margin: 30px 0;
 }
 
 .form-row > label {
@@ -14,7 +15,6 @@
 
 .form-row > input, .form-row > select {
     width: 100%;
-    min-width: 20px;
 }
 
 
@@ -54,9 +54,18 @@
     #content {
         width: 20em;
     }
+
+    .twin-button-row {
+        flex-direction: column-reverse;
+    }
+
 }
 
 #content h2 {
     margin-bottom: 10px;
     margin-top: 0;
+}
+
+#back-btn {
+    background-color: #999999;
 }
