--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ button {
     border-radius: 5px;
     border: none;
     width: 100%;
+    height: 48px;
     margin-top: 20px;
     font-family: Futura;
     font-size: 14pt;
@@ -73,4 +74,8 @@ input {
     border: 1px solid #CCC;
     padding-left: 10px;
     box-sizing:border-box;
+}
+
+a {
+    color: #0d88d3;
 }
