--- a/src/views/product-view/ProductView.css
+++ b/src/views/product-view/ProductView.css
@@ -107,6 +107,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 40em;
 }
 
 @media only screen and (max-width: 600px) {
