--- a/src/views/view.css
+++ b/src/views/view.css
@@ -1,8 +1,6 @@
 .form-row {
-    padding-top: 10px;
-    padding-bottom: 10px;
     flex-grow: 1;
-    margin: 30px 0;
+    padding: 20px 0;
 }
 
 .form-row > label {
