Fix styling for safari

--- a/src/views/product-view/ProductView.css
+++ b/src/views/product-view/ProductView.css
@@ -48,7 +48,7 @@
 }
 
 .order-now-button {
-    width: 150px;
+    width: auto;
     background-color: #fbd80d;
     margin-left: auto;
     margin-top: 0;
