--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,12 @@
     src: url("/assets/futura-book.ttf");
 }
 
-h1, h2, h3, h4, h5, strong, b, button {
-    font-weight: 500;
-}
-
 .App {
     text-align: center;
     font-family: Futura;
     font-size: 14pt;
     margin-bottom: 150px;
+    -webkit-font-smoothing: antialiased;
 }
 
 .App-header {
@@ -49,7 +46,7 @@ button {
     padding: 10px;
     background: #0d88d3;
     color: white;
-    font-weight: bold;
+    font-weight: 600;
     border-radius: 5px;
     border: none;
     width: 100%;
