--- a/src/views/view.css
+++ b/src/views/view.css
@@ -50,7 +50,7 @@
 
 @media only screen and (max-width: 600px) {
     #content {
-        max-width: 20em;
+        max-width: 90vw;
     }
 
     .twin-button-row {
